adjust label spacing, fix dropdown content z ind

--- a/src/styles/mineral-blend.css
+++ b/src/styles/mineral-blend.css
@@ -29,7 +29,7 @@
 }
 
 .blend .menu > p:not(:first-of-type) {
-    margin-top: 20px;
+    margin-top: 15px;
 }
 
 .blend p {
@@ -144,7 +144,6 @@
 
 .dropdown {
     position: relative;
-    z-index: 999;
     display: grid;
     width: 220px;
     height: 20px;
@@ -187,6 +186,8 @@
 }
 
 .dropdown .items {
+    position: relative;
+    z-index: 999;
     background-color: var(--color0);
     border: 1px solid var(--color1);
     border-top: none;
